tests/ui/form_data_unparsable.stderr
error[E0599]: the function or associated item `convert_value` exists for struct `MyType`, but its trait bounds were not satisfied
 --> $DIR/form_data_unparsable.rs:5:10
  |
3 | struct MyType;
  | --------------
  | |
  | function or associated item `convert_value` not found for this
  | doesn't satisfy `MyType: FromStr`
  | doesn't satisfy `_: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error<_>>`
4 |
5 | #[derive(FormData)]
  |          ^^^^^^^^ function or associated item cannot be called on `MyType` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `MyType: FromStr`
          which is required by `MyType: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error<_>>`
          `&MyType: FromStr`
          which is required by `&MyType: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error<_>>`
          `&mut MyType: FromStr`
          which is required by `&mut MyType: gotham_formdata::conversion::ConvertFromStr<gotham_formdata::Error<_>>`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
